fix(tablebodyrow): removed zeroed out padding and fix rtl issues with alignment

--- a/src/components/DataTable/_data-table.scss
+++ b/src/components/DataTable/_data-table.scss
@@ -23,45 +23,56 @@
   }
 }
 
-.bx--data-table td:last-of-type {
-  padding-right: $spacing-09 + $spacing-02;
-}
+// .bx--data-table td:last-of-type {
+//   padding-right: $spacing-09 + $spacing-02;
+// }
 
-.bx--data-table td:first-of-type {
-  padding-left: $spacing-04 + $spacing-02;
-}
-
-.bx--table-sort__icon-unsorted,
-.bx--table-sort__icon {
-  margin: $spacing-03;
-}
+// .bx--data-table td:first-of-type {
+//   padding-left: $spacing-04 + $spacing-02;
+// }
 
 td.data-table {
   &-start {
-    padding-right: $spacing-05 + $spacing-02;
-    padding-left: $spacing-05 + $spacing-02;
+    text-align: start;
+  }
+
+  &-center {
+    text-align: center;
   }
 
   &-end {
-    padding-left: $spacing-05 + $spacing-02;
-    padding-right: $spacing-09 + $spacing-02;
+    text-align: end;
   }
-
-  padding-right: $spacing-04 + $spacing-02 !important;
 }
 
 html[dir='rtl'] {
+  .bx--table-sort__icon-unsorted,
+  .bx--table-sort__icon {
+    margin-right: $spacing-03;
+    margin-left: 0;
+  }
+
   td.data-table {
     &-start {
-      padding-right: $spacing-05 + $spacing-02;
-      padding-left: $spacing-05 + $spacing-02;
+      text-align: start;
+    }
+
+    &-center {
+      text-align: center;
     }
 
     &-end {
-      padding-left: $spacing-09 + $spacing-02;
-      padding-right: $spacing-05 + $spacing-02;
+      text-align: end;
     }
+  }
+}
 
-    padding-right: $spacing-04 + $spacing-02 !important;
+.#{$prefix}--data-table {
+  .table-header-sortable:not(.#{$prefix}--table-sort) {
+    padding: 0;
+  }
+  .#{$prefix}--table-sort {
+    padding-left: $spacing-04;
+    padding-right: $spacing-04;
   }
 }
